<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Pets Match</string>
    <string name="create_title">Pet Create</string>
    <string name="create_subtitle_13">Page 1&#47;3</string>
    <string name="create_subtitle_23">Page 2&#47;3</string>
    <string name="create_subtitle_33">Page 3&#47;3</string>
    <string name="create_pet_genus">Pet genus</string>
    <string name="create_pet_breed">Pet breed</string>
    <string name="create_pet_gender">Pet gender</string>
    <string name="create_pet_name">Pet name</string>
    <string name="create_pet_age">Pet age</string>
    <string name="create_pet_color">Pet color</string>
    <string name="create_pet_during_estrus">During Estrus?</string>
    <string name="create_pet_vaccinations">Are they fully vaccinated?</string>
    <string name="create_pet_allergies">Include any allergies</string>
    <string name="create_pet_personality">Personality definition</string>
    <string name="create_pet_interests">Areas of interest</string>
    <string name="next_page">Next Page</string>
    <string name="no_pets">You do not have a pet defined in your account. You can use the button below to add.</string>
    <string name="title_my_pets">My Pets</string>
    <string name="save">Save</string>
    <string name="title_create_post">Create Pet Post</string>
    <string name="error_text">Error: Try Again</string>
    <string name="add_pet_profile_image">Profile Image</string>
    <string name="add_pet_other_image">Add images</string>
    <string name="open_gallery">Open Gallery</string>
    <string name="open_camera">Open Camera</string>
    <string name="image_source">Image Source</string>
    <string name="error_message">Error message:</string>
    <string name="add_other_images_message">You can use the button below to add more images.</string>
    <string name="goto_login_message">You must log in to create a new ad and register your pets.\nWould you like to go to the login page?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- Search -->
    <string name="search_no_results">No results found</string>
    <string name="search_placeholder">Search...</string>
    <string name="filter">Filter</string>
    <string name="clear_search">Clear search</string>
    <string name="search_results">Search results</string>

    <!-- Entry -->
    <!-- Login -->
    <string name="welcome_title">Welcome!</string>
    <string name="welcome_description">PetsMatch is a matching platform for pet owners and those looking to adopt.</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="go_to_register">Do not have an account? </string>
    <string name="register">Sign Up</string>

    <!-- Register -->
    <string name="register_title">Register Now!</string>
    <string name="register_description">Join PetsMatch to connect with pet owners or find a new companion</string>
    <string name="full_name_hint">Full Name</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="login_methods">Or try these methods</string>
    <string name="go_to_login">Already have an account? </string>
    <string name="login">Sign In</string>

    <!-- Home -->
    <string name="dogs">Dogs</string>
    <string name="cats">Cats</string>
    <string name="others">Other pets</string>
    <string name="popular_cats">Popular Cats</string>
    <string name="popular_dogs">Popular Dogs</string>
    <string name="years_old">Years Old</string>

</resources>