<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="com.izmirsoftware.petsmatch.viewmodel.login.LoginViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:src="@drawable/entry_image"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <LinearLayout
            android:layout_margin="10dp"
            android:background="@drawable/login_layout_bg"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:text="@string/register_title"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:textAlignment="center"
                android:textSize="35sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/register_description"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/full_name_hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etFullName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_bg"
                    android:textColor="@color/normal_text_color" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginHorizontal="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_bg"
                    android:textColor="@color/normal_text_color" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginHorizontal="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_bg"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginHorizontal="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password_hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etConfirmPassword"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_bg"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:background="@drawable/main_button_bg"
                android:textColor="@color/white"
                android:elevation="20sp"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="5dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_methods"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:layout_marginVertical="5dp" />

            <ProgressBar
                android:id="@+id/pbRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_gravity="center" />
            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginHorizontal="5dp"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_marginHorizontal="5dp"
                    android:src="@drawable/google"
                    android:id="@+id/layoutGoogle"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:background="@drawable/main_button_bg"
                    android:tint="@color/white"
                    android:padding="6dp"
                    android:layout_gravity="center"
                    tools:ignore="UseAppTint" />
                <ImageView
                    android:layout_marginHorizontal="5dp"
                    android:src="@drawable/google"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:background="@drawable/main_button_bg"
                    android:tint="@color/white"
                    android:padding="6dp"
                    android:layout_gravity="center"
                    tools:ignore="UseAppTint" />

            </LinearLayout>
            <LinearLayout
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/go_to_login"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    />
                <TextView
                    android:layout_marginStart="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:id="@+id/tvGOtoLogin"
                    android:text="@string/login"
                    android:textColor="@color/main_button_gb_color"
                    />
            </LinearLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
