<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="androidx.navigation.Navigation" />

        <variable
            name="viewPetModel"
            type="com.izmirsoftware.petsmatch.model.Pet" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.home.CreatePetPage3Fragment">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/baseline_arrow_back_ios_new_24"
            app:navigationOnClickListener="@{() -> Navigation.findNavController(toolbar).popBackStack()}"
            app:subtitle="@string/create_subtitle_33"
            app:subtitleCentered="true"
            app:title="@string/create_title"
            app:titleCentered="true" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/dividerToolbar"
            android:layout_width="0dp"
            android:layout_height="2dp"
            app:layout_constraintBottom_toTopOf="@id/imageProfile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageProfile"
            downloadImage="@{viewPetModel.profileImage}"
            android:layout_width="0dp"
            android:layout_height="220dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@id/rvPetImages"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dividerToolbar"
            tools:src="@drawable/placeholder" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/fabAddProfileImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/add_pet_profile_image"
            app:icon="@drawable/baseline_add_24"
            app:layout_constraintEnd_toEndOf="@id/imageProfile"
            app:layout_constraintTop_toTopOf="@id/imageProfile" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvPetImages"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="4dp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintBottom_toTopOf="@id/bottomLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageProfile"
            app:spanCount="2" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/fabAddOtherImages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/add_pet_other_image"
            app:icon="@drawable/baseline_add_24"
            app:layout_constraintEnd_toEndOf="@id/rvPetImages"
            app:layout_constraintTop_toTopOf="@id/rvPetImages" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bottomLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_max="480dp">

            <Button
                android:id="@+id/buttonSave"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:text="@string/save"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="36dp"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/buttonSave"
                app:layout_constraintEnd_toEndOf="@id/buttonSave"
                app:layout_constraintStart_toStartOf="@id/buttonSave"
                app:layout_constraintTop_toTopOf="@id/buttonSave"
                tools:indeterminateTint="@color/black"
                tools:visibility="visible" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>