<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@android:color/transparent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:scrollbars="none"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:background="@drawable/theme_color_bg"
            android:layout_margin="10dp"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/dog" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dogs"
                android:textSize="16sp"
                android:textColor="@color/normal_text_color" />
        </LinearLayout>



        <LinearLayout
            android:layout_margin="10dp"
            android:background="@drawable/theme_color_bg"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/cat" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cats"
                android:textSize="16sp"
                android:textColor="@color/normal_text_color" />
        </LinearLayout>

        <LinearLayout
            android:layout_margin="10dp"
            android:background="@drawable/theme_color_bg"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:padding="5dp"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/pet"
                app:tint="@color/normal_text_color" />

            <TextView
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/others"
                android:textSize="16sp"
                android:textColor="@color/normal_text_color" />
        </LinearLayout>
    </LinearLayout>
</HorizontalScrollView>