<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.home.HomeFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            app:layout_constraintBottom_toBottomOf="@+id/linearLayoutHome1"
            android:scaleType="centerCrop"
            android:src="@drawable/entry_image"
            android:layout_width="match_parent"
            android:layout_height="0dp"/>
        <LinearLayout
            android:id="@+id/linearLayoutHome1"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="9dp">

                <androidx.appcompat.widget.SearchView
                    android:hint="@string/search_placeholder"
                    android:id="@+id/searchView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/search_view_bg"
                    app:layout_constraintBottom_toBottomOf="@+id/ivFilter"
                    app:layout_constraintEnd_toStartOf="@+id/ivFilter"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/ivFilter" />

                <ImageView
                    android:id="@+id/ivFilter"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/rounded_button_background"
                    android:padding="10dp"
                    android:src="@drawable/filter"
                    app:layout_constraintEnd_toEndOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/includeCoverImageVillaCreate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <include layout="@layout/row_pet_type" />

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutHome1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ProgressBar
                android:layout_gravity="center"
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <TextView
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textColor="@color/normal_text_color"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/popular_dogs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:drawableRightCompat="@drawable/baseline_arrow_forward_ios_24" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvPopularDogs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="4dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:spanCount="2" />

            <TextView
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textColor="@color/normal_text_color"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/popular_cats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:drawableRightCompat="@drawable/baseline_arrow_forward_ios_24" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvPopularCats"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="4dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:spanCount="2" />



            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:visibility="gone"
                android:id="@+id/fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:clickable="true"
                android:src="@drawable/baseline_add_24"
                app:fabSize="mini"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:maxImageSize="30dp"
                tools:ignore="ContentDescription,KeyboardInaccessibleWidget,SpeakableTextPresentCheck" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>